# unicode-properties

./: Cargo.toml  README.md
scripts/: unicode.py
src/: lib.rs  tables.rs
tests/: general_category.rs
