[package]
name = "unicode-properties"
version = "0.1.4"
authors = ["Charles Lew <crlf0710@gmail.com>", "Manish Goregaokar <manishsmail@gmail.com>"]
edition = "2021"
homepage = "https://github.com/unicode-rs/unicode-properties"
repository = "https://github.com/unicode-rs/unicode-properties"
documentation = "https://docs.rs/unicode-properties"
license = "(MIT OR Apache-2.0) AND Unicode-3.0"
keywords = ["text", "unicode"]
categories = ["no-std::no-alloc"]
readme = "README.md"
description = """
Query character Unicode properties according to
UAX #44 and UTR #51.
"""
exclude = [ "target/*", "Cargo.lock", "scripts/*" ]

[features]
general-category = []
emoji = []
default = ["general-category", "emoji"]

[dependencies]
